<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mapapplication.ui.home.HomeFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mapapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_contribute"
        tools:layout="@layout/fragment_dashboard" >
        <argument
            android:name="lat"
            app:argType="string" />
        <argument
            android:name="lng"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="address"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mapapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_notifications" />
</navigation>